Pen thickness functionality added

--- a/QuickNote/Form1.resx
+++ b/QuickNote/Form1.resx
@@ -124,29 +124,29 @@
   <data name="SaveButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAUjSURBVHhe7Z3LTitHEEB5iJeEIsSGXbLIN+RTLKTcBd+U
-        SCz4gdxN/uMq3xCUTXKVTURIeEjYKE5VZu5l0n3c1fb0tGFcRzoLoKqrpwoZY8z0luM4m8hsNvtlvkae
-        np7+aLeymUgPJtKE56Yd66Hdysoci+/E9+IH8aOoi74ZJ5PJ/Pl5fTOQPazE1+KP4oP4q/i3GF3cW3Gd
-        Q5D6S6Hf8d+J9+KjGF3MW3VdQ5Da2Xwp/ixq86MLUG9ubtplXx+6N9pz13UMQepm8Y34pzgTo41/8rUw
-        nU7nd3d37Ucv0J5Daw9Bapp8JWrzo82G1uLq6mp+cnKCe1B3dnbmp6en8/v7+zajgWLJmkOQekn0MV8f
-        dpLf+Z+sxdHREdbvuru7q8+z24wGiltkrSFIrSTfiwsf80NrQbXJEIpJWWMIUmch+lQzu/lqLag2GUIx
-        lkMPQWosRJ/nL/VUsxZUmwyhmByHHIKsj3wh6i9Z0WZS1oJqkyEUk+tQQ5C1kW/F38RoIylrQbXJEIpZ
-        xiGGIOsiP4h/idEmUtaCapMhFLOspYcgayI/if+I0QZS1oJqkyEUs4olhyDrIb+LUWHLWlBtMoRiVrXU
-        EGQt5FmMilrWgmqTIRTTxxJDkHWQqFiOtaDaZAjF9LXvEGQNJCqUYy2oNhlCMSXsMwTJR6IiOdaCapMh
-        FFPKVYcguUhUIMdaUG0yhGJKusoQJA+JFs+xFlSbDKGY0i47BMlBooVzrAXVJkMoZgiXGYLEI9GiOdZi
-        f38f63fd3t5uo1+guKHMHYLEItGCOdbi/Px8fnx8jHtQ9WtnZ2dt9AsUO6Q5Q5A4JFosx1ronxovLi7m
-        h4eHuI+9vb355eVlG/0CxQ6tNQSJQaKFcgz/BvuaeHh4wD3XMDUE+ToSLeL2c9EQ5GtItIDbXxqCfB6J
-        kt0y6hC6bwiWzyFRoltO4fO7suVjJEpyi6pTmEynU31jM0JJbjlNKMktpwklueU0oSS3nCaU5JbThJLc
-        cppQkltOE0pyy2lCSW45TSjJLacJJbnlNKEkt5wmlOSW04SS3HKaUJJbThNKcstpQkluOU0oyS2nCSW5
-        5TShJLecJpTkltOEktDb21t9d8VGoz2g3iQ0oSTUaaDeJDShJNRpoN4kNKEk1Gmg3iQ0oSS0y/X1ddZ/
-        r7x19Rr1WrtQXEITSkK7PD4+/vevQRQ3NvVau1BMQhNKQkMoZoyGUExCE0pCQyhmjIZQTEITSkJDKGaM
-        hlBMQhNKQrts0s+A2WzWXnUDxSQ0oSS0iz4zODg4wLgxqf+FuepNYVtNKAndRMIbwirUm4QmlIQ6DdSb
-        hCaUhDoN1JuEJpSEOg3Um4QmlIQ6DdSbhCaUhDoN1JuEJpSEOg3Um4QmlIQ6DdSbhCaUhHbRX8T0lxSK
-        G5N6jUO/HJ1949Yu+lIExYzRHi9Ha29Nsm9dHEIxYzSEYhaovTXJvnl3CMWM0RCKAbWn2luT7NvXd9mk
-        hyC470+O2lPtrUn2AQ5dNuWHsJ7QtOKrodpT7a1J9hEmm4geFBdCvQG1p9rbLLIO8XEaqDeB2kvtaTZZ
-        x1g5DdSbQO2l9nQpzIPc6MzGTUN7QL3pqD3UXi7NUkcZuqj2TnuovVyJ7MM8XVR7pz3sRdZxtu7/1F5p
-        z7R3RTAPdHY/qz3SXmnPijLaI80LqT3R3miPVn7Mz2FUh/r3VK9de6C90J4s/VSzDzrld+J78YP4UaRN
-        jlG9Vr1mvXbtwaDf8Y7jOM4Y2dr6F38rwvilM6x+AAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAUlSURBVHhe7Z1LTiRHEED5iJ+ELMSGnb3wGXwUhORZcCZb
+        YsEFPBvfY+QzGHljj7yxMDYfQTdyO8JVM5QzX2dkdWVnQ3U86S2AiIysCNQ0TVO54TjOOjKdTn+ZrZDH
+        x8c/2q2sJ9KD07u7u+emHauh3crCHIrvxPfiB/GjqIu+GU9PT2fPz6ubgexhIb4WfxTvxV/Fv8Xo4t6K
+        qxyC1O+Ffsd/J96JD2J0MW/VVQ1BamfzpfizqM2PLkC9vr5ul3196N5oz11XMQSpm8U34p/iVIw2/snX
+        wmQymd3e3rYfvUB7Dq09BKlp8pWozY82G1qLy8vL2dHREe5B3dramh0fH8/kGU6b0UCxZM0hSL0k+piv
+        DzvJ7/xP1uLg4ADrd93e3p49PT21GQ0UN89aQ5BaSb4X5z7mh9aCapMhFJOyxhCkzlz0qWZ289VaUG0y
+        hGIslz0EqTEXfZ7f66lmLag2GUIxOS5zCLI+8oWov2RFm0lZC6pNhlBMrssagqyNfCv+JkYbSVkLqk2G
+        UEwflzEEWRf5QfxLjDaRshZUmwyhmL6WHoKsifwk/iNGG0hZC6pNhlDMIpYcgqyH/C5GhS1rQbXJEIpZ
+        1FJDkLWQZzEqalkLqk2GUMwQSwxB1kGiYjnWgmqTIRQz1KFDkDWQqFCOtaDaZAjFlHDIECQfiYrkWAuq
+        TYZQTCkXHYLkIlGBHGtBtckQiinpIkOQPCRaPMdaUG0yhGJK23cIkoNEC+dYC6pNhlDMMuwzBIlHokVz
+        rMXu7i7W77q5udlGv0BxyzJ3CBKLRAvmWIuzs7PZ4eEh7kHVr52cnLTRL1DsMs0ZgsQh0WI51kL/1Hh+
+        fj7b39/Hfezs7MwuLi7a6BcodtlaQ5AYJFoox/BvsK+J+/t73HMNU0OQryPRIu4w5w1BvoZEC7jDpSHI
+        55Eo2S2jDqH7hmD5HBIluuUUPr8rWz5GoiS3qDqF08lkom9sRijJLacJJbnlNKEkt5wmlOSW04SS3HKa
+        UJJbThNKcstpQkluOU0oyS2nCSW55TShJLecJpTkltOEktxymlCSW04TSnLLaUJJbjlNKMktpwklueU0
+        oSS3nCaU5JbThJLccppQEnpzc6PvrlhrtAfUm4QmlIQ6DdSbhCaUhDoN1JuEJpSEOg3Um4QmlIR2ubq6
+        yvrvlbeuXqNeaxeKS2hCSWiXh4eH//41iOLGpl5rF4pJaEJJaAjFjNEQikloQkloCMWM0RCKSWhCSWgI
+        xYzREIpJaEJJaJd1+hkwnU7bq26gmIQmlIR20WcGe3t7GDcm9b8wF70pbKsJJaHrSHhDWIV6k9CEklCn
+        gXqT0ISSUKeBepPQhJJQp4F6k9CEklCngXqT0ISSUKeBepPQhJJQp4F6k9CEklCngXqT0ISS0C76i5j+
+        kkJxY1KvcdkvR2ffuLWLvhRBMWN0wMvR2luT7FsXh1DMGA2hmDlqb02yb94dQjFjNIRiQO2p9tYk+/b1
+        XdbpIQju+5Oj9lR7a5J9gEOXdfkhrCc0LfhqqPZUe2uSfYTJOqIHxYVQb0DtqfY2i6xDfJwG6k2g9lJ7
+        mk3WMVZOA/UmUHupPe2FeZAbndm4bmgPqDcdtYfay970OsrQRbV32kPt5UJkH+bpoto77eEgso6zdf+n
+        9kp7pr0rgnmgs/tZ7ZH2SntWlNEeaV5I7Yn2Rnu08GN+DqM61H+geu3aA+2F9qT3U80h6JTfie/FD+JH
+        kTY5RvVa9Zr12rUHS/2OdxzHccbIxsa/sdrCyEUoAvwAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="LoadButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -272,75 +272,75 @@
   <data name="CursorButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAgZSURBVHhe7Z1bTFxFHMa5Q6Hcr5EASgwqxgRECxEJVkyq
-        2AcK0WjRNxJUohhNTB9UMNqYqCnpQ+VBUUs0BJJimza1SoU2pLbRIBIvxEtbEFu0pS2ltBTY3fH72rME
-        cVi2XJY5c86X/NJmA1nON3Nm/vOf/5zjZ8ujbgEx1/9ry1cKBS+CE+A3MAIKgS0f6CEwCH4H00CAMXAO
-        3ANsrZAiwA5wFkwCGj8bNgLvhLuArWXWHeA4OAPmGj8bNgJ/JgvYWiZVgFEwAWSmz4WNcBpwcra1BPmD
-        twENlRntCf7OEEgFthYhRjntYDHmu+HvcthKArZuQPGgB4wDmbE3wiXQD+KALS+UBv4EsihnsbAR+kAk
-        sOVBtwGGmA4gM3Ip8G76DoQDWxLdDS4CF5AZuBywEboB5xdbs1QAlmO894bLoAMEAVvQfYCmyMxaKa6A
-        vSAQWFpFgGbITFpp+L1tgGsNS+p+sFrmu+HK+hNgOTFjudrmu7kK3geWETOVvppwvYWN8B7QXreCpaQW
-        VhIu/N4A2or5GC6yZBevClPgFaCduJHC3auVXGQtF2yE54E2Yqx9FKxEemGl4DZnFdBCzYC9SnahKsNG
-        qASmFm/l5cxq+hretdyNM6W4yjWr+afAP+Bb0AtMp2TAHLzs4lSG2Vhu6H8EuC9hSgWAH4DsAlWGBV7c
-        vjR9cde7wF0sZQa4CuaQ8yFguGxq5QMzRTx/A1bTPQ1Mr2DAC5JdqIpwYciylRyghd4BTiC7WNX4FRwD
-        DBa0EMtIOJbKLlYlODf9AVpAGNBGDNtkF6wS3H9gRTXTzlrtgvFiVI/5WVc6DF4G2ikTqLbBMhsGBkyD
-        PwW0VCxQtQFYIU3zy4HWYimhzIDV5C/AwxqlQGvdDFTZYHfDDsGe/yDQXqwyk5mwWrDn0/xioL14WM7b
-        Uyu+gJEOh50SoL04+V4AMiNWA6aR2fMfAZbQF0CVrCc7Ant+GbCEXgKqhJ4MABjrPwksIU5uvq5mng/u
-        2TKXr1UZiSelg/NAlfoe5nbeBJZQFOAzGVSJek6CD4AlxNMknYBJLZkZvoY9/ytgmVMuTYBRhswMX8MJ
-        9xfAO9IS4hirivkc/hjvcy6yhBhdcNNaZsZqwCHQEikGinG1SubzLqwFlhBXlFxdqrLJzkMdnwNLiLkU
-        mq9SfQ/rNJl70l7MItJ8lSocWK9piewmJzeuclXaXGGqwRJDD3eOaL4qOR437P3ccdNa3DPlsKPSxoob
-        FlFpLVYLsOerWtXGeiNtJ1/WybDnq3yKhQsv1h1pJ1aIcZGl+slFdhDtyghZG7nQszdVgJ2jAWgjVgO3
-        Ai5qZBesGtzyZNW1FmIdPJ+XZoaeTxiRvQa0EE+AsEaS0Y7sYlWEGy48cWN68ewTFzNmODzhhr0/D5ha
-        PO33MTBTrydcib8OTC2ec2VxKkM42UWqCou8jgCeMzaleLL7U8AhxyyH5WbDu9WUh+Z+MlA1n+MNHHpM
-        eUJ9YOPGjXzqn5lOps+F8b5pn81zJjo62rVhwwYWyprxmTxMtjUC0+rnXbt2jWZlZYni4mI+7t1MjcCe
-        /zUw9dNruw4cOHB6ZGREFBYWiry8PJbrmaEROFf9CEz/cIy2pqamQQFNTEyIiooKkZ2dPRIQEKByIzD9
-        zWNEWrzVYsfWrVtPsAEop9MpamtrRUZGxuWQkBAVJ2b+Tazv4fNDtVB9TU3NccP/GW3btk0kJSVNRURE
-        qJTv59/CUFmrd3w9t2nTppk7YLba2tpEXFycIyYmRoVG4HkCLhC1e8vdY0VFRQOG5/9Td3e3SEhIcBL8
-        rMwYX8DvpvlavufxAUy6pwy/perv7xfp6enO5OTk1WgE3n00n4+q11J3onePGF7Pq+HhYZGTk+NMSUnx
-        5dEims9NdT7GTFslhoeHjxs+e9T4+LhYv3497wRfNAJDTU64fDGP1gpEzD+Gu2D60KFDhtXzy+FwiKqq
-        Kld8fLzMtOXCfWw0G+iv2NjYroKCAufatWsd3jQCVVdX54qOjpaZt1SYXuBBvpuAJZQTFRV1ZWxsTDQ0
-        NExhOPK6EZqbm0VkZKTw9/eXGbkYWMP/DYgG1hB68bHt27e7DE/Fzp07p9asWeN1Ixw8eFCgAUVgYKDM
-        0BuBWU0+N06LjXRv9WhGRsYljuuz1draOhUWFubo7Ow0PvGsvr4+kZiYKEJCQmTGegPH/GeBpRQYERFx
-        ct++fYaN/9WePXumQkNDHR0dHcYnnjU0NCQyMzMFfkdm8Hww4ce8jrYxvidVr1u37oLhn1RohGk2wv79
-        +53GRx41Ojoq8vPzBYYwmdlzYTqZD2qyxLGhuYqEsed7e3sN6+YX7gAHhiNne3v7lPGRR01OToqysrKF
-        GoH7tzXAmkLU8lZ5efl5w7MFhbnACUOdLS0tE8ZHHuVyua6ltNFwc41nKvlLkAAsrVNbtmw5Yvi1oKan
-        pwUa7CoiHUdPT8854+MFhejKPScwh8Ttznv55bb8/HLBYGVlZbfh1bxCOOpKS0sbCQoKYs99Af+ePXz4
-        8DBzQ0zSdXV1CdwZorGxUdTX14vq6mpRWlp6JS8vbyI1NXUKkZErODiYdaW25igFHMvNzf0ek+fMOsAt
-        TqibN28eg4F8htrj137juh7GEHYRn5/Dom0QHMVaYi8iKpYx1oFnwBPgAXA74PfYmkes9/8sJSXl+MDA
-        wMxiAOsAAUPHMe7zjRDWWZWuol5Fjz6ze/fuyZKSkgmYz3eh8A3VtnyocozVIzExMawstl/Vvezy8/sX
-        Gg0wnWstz9QAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAgeSURBVHhe7Z19TJVVHMd5ExDk/UWsIcUaFa0JWcIipsum
+        vfgHwmo06j82Kla02pp/VNDKtRGz+YfxR1nJagympNOZhYGOma5GxHphRb4QKSVXRUQRuPeevl99LiM6
+        XK54uZznPM93+0x3B7s833Oec37nd37neYJsedXtIP76f20FShHgZXAC/A4coADYCoAeAX2gF0wAAYbB
+        OXA/sDVPigbbwCAYAzR+KmwE3gn3Alt+1t3gODgLphs/FTYCfyYL2PKTSsAQGAUy06fDRjgDODnbugkF
+        g3cBDZUZ7Q3+Tj+4FdiagxjltIC5mO+Bv8thKxXYugElgU4wAmTG3giXQA9IBLZ8UDr4E8iinLnCRugG
+        McCWF90JGGI6gczIm4F30/cgCtiS6D5wEbiBzEB/wEboAJxfbE1RPvDHeO8Ll0ErCAO2oAcBTZGZNV9c
+        AXtBKLC0CgHNkJk03/B7mwHXGpbUQ2ChzPfAlfWnwHJixnKhzfdwFXwALCNmKgM14foKG6EOaK87wM2k
+        FuYTLvzeAtqK+RgusmQXrwrj4DWgnbiRwt2r+Vxk+Qs2wotAGzHWPgrmI70wX3CbsxxooQbAXiW7UJVh
+        I5QBU4u3sj+zmoGGdy1340wprnLNav5p8A/4DnQB02kpYA5ednEqw2wsN/Q/BtyXMKVCwI9AdoEqwwIv
+        bl+avrjrPeApljIDXAVzyPkIMFw2tfKAmSKevwGr6Z4FptciwAuSXaiKcGHIspUcoIVqgQvILlY1fgPH
+        AIMFLcQyEo6lsotVCc5Nf4BGEAm0EcM22QWrBPcfWFHNtLNWu2C8GNVjftaVDoBXgXbKBKptsEyFgQHT
+        4M8ALZUAVG0AVkjT/GKgtVhKKDNgIfkL8LDG40Br3QZU2WD3wA7Bnv8w0F6sMpOZsFCw59P81UB78bCc
+        r6dWAgEjHQ47a4H24uR7AciMWAiYRmbPfwxYQl8CVbKe7Ajs+UXAEnoFqBJ6MgBgrP80sIQ4uQW6mnkm
+        uGfLXL5WZSTetBycB6rU9zC38zawhGIBn8mgStRzEnwILCGeJmkDTGrJzAg07PlfA8ucctkOGGXIzAg0
+        nHB/BbwjLSGOsaqYz+GP8T7nIkuI0QU3rWVmLAQcAi2RYqAYV6tkPu/CKmAJcUXJ1aUqm+w81PEFsISY
+        S6H5KtX3sE6TuSftxSwizVepwoH1mpbIbnJy4ypXpc0VphosMfRw54jmq5Lj8cDezx03rcU9Uw47Km2s
+        eGARldZitQB7vqpVbaw30nbyZZ0Me77Kp1i48GLdkXZihRgXWaqfXGQH0a6MkLWRsz17UwXYOd4H2ojV
+        wE2AixrZBasGtzxZda2FWAfP56WZoecTRmRvAC3EEyCskWS0I7tYFeGGC0/cmF48+8TFjBkOT3hg718J
+        TC2e9vsEmKnXE67E3wSmFs+5sjiVIZzsIlWFRV5HAM8Zm1I82f0Z4JBjlsNyU+HdaspDcz8bqJrP8QUO
+        PaY8oX5qw4YNfOqfmU6mT4fxvmmfzXM2Li7OvX79ehbKmvGZPEy21QPT6pddu3YNZWVlidWrV/Nx72Zq
+        BPb8b4Cpn17bfuDAgTMOh0MUFBSIlStXslzPDI3AueonYPqHYzRv3769T0Cjo6OipKREZGdnO0JCQlRu
+        BKa/eYxIi7dabNu8efMJNgDlcrlEVVWVyMjIuBweHq7ixMy/ifU9fH6oFqqprKw8bvg/qS1btojU1NTx
+        6OholfL9/FsYKmv1jq8XNm7cOHkHTFVzc7NITEx0xsfHq9AIPE/ABaJ2b7l7srCw8JTh+f/U0dEhkpOT
+        XQQ/KzMmEPC7ab6W73lcg0n3tOG3VD09PWL58uWupUuXLkQj8O6j+XxUvZa6B73bYXg9owYGBkROTo4r
+        LS0tkEeLaD431fkYM22VEhUVNWL47FUjIyNcrPFOCEQjMNTkhMsX82itUMT8w7gLJg4dOmRYPbOcTqco
+        Ly93JyUlyUzzF55jo9lAfyUkJLTn5+e7lixZ4vSlEajq6mp3XFyczLybhekFHuS7BVhCObGxsVeGh4dF
+        bW3tOIYjnxuhoaFBxMTEiODgYJmRc4E1/N+COGANoRcfq6urcxueih07dowvXrzY50Y4ePCgQAOK0NBQ
+        maE3ArOafG6cFhvpvuqJjIyMSxzXp6qpqWk8MjLS2dbWZnziXd3d3SIlJUWEh4fLjPUFjvnPA0spNDo6
+        +uS+ffsMG/+rPXv2jEdERDhbW1uNT7yrv79fZGZmCvyOzOCZYMKPeR1tY3xvqli1atUFwz+pdu7cOcFG
+        2L9/v8v4yKuGhoZEXl6ewBAmM3s6TCfzQU2WODY0XTEw9nxXV5dh3czCHeDEcORqaWkZNz7yqrGxMVFU
+        VDRbI3D/thJYU4ha3ikuLj5veDarMBe4YKirsbFx1PjIq9xu97WUNhpuuvFMJX8FkoGldXrTpk1HDL9m
+        1cTEhECDXUWk4+zs7DxnfDyrtm7d6pkTmEPiducD/HJbQUG5oK+srKzD8GpGYQhyp6enO8LCwthzX8K/
+        g4cPHx5gbohJuvb2doE7Q9TX14uamhpRUVEh1q1bd2XFihWjy5YtG0dk5F60aBHrSm1NUxo4lpub+8Pg
+        4ODkOsAjTqilpaXDMJDPUHvq2m9c16MYwi7i83NYtPWBo1hL7EVExTLGavAcKAVrwF2A32NrBrHe//O0
+        tLTjvb29k4sBrAMEDB3BuM83QlhnVbqAeh09+uzu3bvH1q5dOwrz+S4UvqHaVgBVjLHaER8fz8pi+1Xd
+        fldQ0L+SczAZJCVmFwAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="DrawButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYxSURBVHhe7ZxLaCRVGEZHxURFRERIBEEUxYWCYIzgQkQM
-        ydb3VgSFSFwIunCh4KAuXJiEZJEsXARBwY2gC0HBhYJBEBTf4yNO3u9oXprEZLr8Tk1VrFxudyrd1Vek
-        /gOHmc70ZPH9t+vxdVWdMgzDMP6P3CpfljfHr4ygPCYPZCR35H3SCMSbkuCz7kobQgDek274qTaEJnKB
-        /FT6gs9qQ2gCrfIb6Qvcpw2hQK6S09IXdC1tCAVwvfxN+gLOow2hATrlktyUvnDzakOokym5Ln2hnlQb
-        Qh3cI/+Qe9IX6km1IeTgbjkn741f2RCCcpdck1uSaqFZQ+B3W3fkcKdclQSdDapZQ3hFGgm3Szf81GYM
-        gQKPFtUQt8kVWetop+gh0KIa4ha5LPMcahY1BFpUQ7AT5CRrQ/qCcq1I3p9SzxBoUQ1xo1yUJwmfs2FC
-        z3KSIdCiGuIGOS/rDZ8/2WydZHNEi0qVXXquk7Myb7fjC5/X/DzPPoGjnTOSKrv0XCuplIsIP31PrSHw
-        XlpUquzSc42clJzhpuHVMk/4qb4hcFTFDpsqu/S0SVZiM8JPdYfAJ+2O+FXJuVr+LLelLzjXesJPzQ7B
-        EGx72QGGCB/5hNGiGuJK+b38U/rCcm00fLb7tKhU2aXnCslxd+jwqbJLz+XyK/mX9IXl2mj4HO3QolJl
-        l57L5BcyZPi0qFTZpedS+bnkSMQXlmuj4VNjUEdQZZceTvM/kyHD5ySLKrv0tMhPZMjwaVHt+1xxsfxY
-        cpWBLyzXRsPnvbSoN8nSc5H8SIYMnxaVKrv0EP4HMu83UY2GzxnujKTKLj0XyvdlyPBpUamySw/fKL0r
-        Q4VPh0SLSpVdegj/Hfm39IXlWkT4tKhU2YZ4S4YKnw6JFpUq2xBjMmT4tKj2NWLCG3Jf+sJybTR8OqSv
-        JVW2IUZkyPBpUamyDTEkQ4VPjUGLSpVtiH6Z3v5/nEWET4tKlW2I12TI8GlRqbINwQ0LocKnQ6JFtSvW
-        El6SIcOnRaXKNsQLMlT41BgfSqpsQzwvz0lfWK5FhE+LSptqiOdkyPBpUS38hGdkqPCpMWhRqbIN8bQM
-        GT4tqt0ckfCUDBk+LaqFn/CkDBU+NQYtqpHwuAwZPi2qkaGZN0dkJXxaVMPhIXncdfqNhs/JHC2qIdol
-        VxM8Gr86D2e8XMzqC6+I8F+XRgKVMk+bIphH+EHC29J9/loR4dOiGgms/t9levlIdgiXSPr3LyX/VkT4
-        r0ojA6uf71bdoB7e398/Oz4+/oD+zqeD9zQa/mlpZEhXv+8qhoP19fW53d3dvbGxsSf0miHUGz6HtOxT
-        DAdW/3ft7e3R9PR01N3dfSS40dHRys7OTkVD2K5UKo2ET4tqOLD6uWFtv7+/P1peXo729vaODKG3tzda
-        XV2NIDMEjpbcTVY1Cf9ZaXhg9f/A6temJg4ZGEJLS0scYGdn5+EAgCFkNkdcFuIGnpXwaVEND+nqP2D1
-        T05OJhGfp6enJw6xtbU12tjYiIeAyeZoL9kxc3RU7RHBhE+LalSB1X/GXf0pQ0NDh2EyhI6Ojqivry8a
-        GRmpsGPm6Ej/xiEq5wnuyRrh06IaVUhX/zlW/8zMTBL7v6ysrGQDdeVw8kGZ8qJMawvCp0U1asDq/4XV
-        z+alGgxheHg43imn+4SMDIHNUArdEQUeLapRA1Y/NyxXWP1zc3NJ3LXRdj/q6uo6bghGDlj9E8etfh9V
-        hkCdfL80cnBk9S8sLCTR5oNN0tTUVDZ8zp550BHnBUYOWP1nWf2bm5tJrMdD6LyfobW1taXBfysZJr/T
-        bgvKQbr64yCXlpaSeKszOzvrBs/mhrtRLPg6ILCpPKt/fn4+2traygbPoeWPktv+Lfg6YPXHDz0lVLbl
-        PhYXF93gKdt+Sv6vBd8AhDdbbfVTwjnB46/Sgi+Aw9U/MDAQra2tJbFHcbezvb3tBk+3Y8EXCEHOs/pZ
-        5cAQPMFzKEnHb8EXCKufUKPBwcG4ZiZ4PgmZ4NNHA1vwTYBQeVhRNDExEQ8hE3z6QGwLvkkcrn5HHmBE
-        aWbBNxkC5iF1afB8Eiz4QGRXP1+WWPCBGZDcWciXJBb8f8CEZAgWvGEYhmEYhlEop079AwwZ+aHThuHR
-        AAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYrSURBVHhe7ZxLaCRVGEajYqIiIiIkgiCK4kJBMEZwISKG
+        ZOt7K4JCJC4EXbhQcFAXLkxCsnDjIggKbgRdCAouFAyCoPgeH3HSeT81LzVtMl1+p6YqVi63O5Xu6itS
+        /4HDTGd6svj+2/X4uqo6DMMwjP8jN8sX5Y3xKyMoj8gDGcm/5D3SCMQbkuCz7kkbQgDelW74qTaENnKe
+        /ET6gs9qQ2gDXfJr6Qvcpw2hQK6Qs9IXdCNtCAVwrfxV+gLOow2hBfrkityWvnDzakNokorclL5QT6oN
+        oQnukr/LqvSFelJtCDm4Uy7Iu+NXNoSg3CE35I6kWmjXEPjd1h053C7XJUFng2rXEF6SRsKt0g0/tR1D
+        oMCjRTXELXJNNjraKXoItKiGuEmuyjyHmkUNgRbVEOwEOcnakr6gXGuS96c0MwRaVENcL5flScLnbJjQ
+        s5xkCLSohrhOLspmw+dPNlsn2RzRolJll55r5LzM2+34wuc1P8+zT+Bo57Skyi49V0sq5SLCT9/TaAi8
+        lxaVKrv0XCVnJGe4aXiNzBN+qm8IHFWxw6bKLj3dkpXYjvBT3SHwSbstflVyrpQ/yV3pC861mfBTs0Mw
+        BNtedoAhwkc+YbSohrhcfif/kL6wXFsNn+0+LSpVdum5THLcHTp8quzSc6n8Uv4pfWG5tho+Rzu0qFTZ
+        pecS+bkMGT4tKlV26blYfiY5EvGF5dpq+NQY1BFU2aWH0/xPZcjwOcmiyi49nfJjGTJ8WlT7PldcKD+S
+        XGXgC8u11fB5Ly3qDbL0XCA/lCHDp0Wlyi49hP++zPtNVKvhc4Y7J6myS8/58j0ZMnxaVKrs0sM3Su/I
+        UOHTIdGiUmWXHsJ/W/4tfWG5FhE+LSpVtiHelKHCp0OiRaXKNsSkDBk+Lap9jZjwutyXvrBcWw2fDukr
+        SZVtiNdkyPBpUamyDTEuQ4VPjUGLSpVtiBGZ3v5/nEWET4tKlW2IV2TI8GlRqbINwQ0LocKnQ6JFtSvW
+        El6QIcOnRaXKNsRzMlT41BgfSKpsQzwrz0pfWK5FhE+LSptqiGdkyPBpUS38hKdkqPCpMWhRqbIN8aQM
+        GT4tqt0ckfCEDBk+LaqFn/C4DBU+NQYtqpHwqAwZPi2qkaGdN0dkJXxaVMPhAXncdfqths/JHC2qIXok
+        VxM8HL86B2e8XMzqC6+I8F+VRgKVMk+bIpiH+EHCW9J9/loR4dOiGgms/t9kevlIdggXSfr3LyT/VkT4
+        L0sjA6uf71bdoB7c398/MzU1dZ/+zqeD97Qa/ilpZEhXv+8qhoPNzc2FnZ2d6uTk5GN6zRCaDZ9DWvYp
+        hgOr/9uenp5odnY2GhgYOBLcxMREbXt7u6Yh7NZqtVbCp0U1HFj93LC2PzIyEq2urkbVavXIEIaGhqL1
+        9fUIMkPgaMndZNWT8J+WhgdW//esfm1q4pCBIXR2dsYB9vX1HQ4AGEJmc8RlIW7gWQmfFtXwkK7+A1b/
+        zMxMEvE5BgcH4xC7urqira2teAiYbI6qyY6Zo6N6jwgmfFpUow6s/tPu6k8ZHx8/DJMh9Pb2RsPDw/y8
+        xo6ZoyP9G4eonCe4J2uET4tq1CFd/WdZ/XNzc0ns/7K2tpYN1JXDyftlyvMyrS0InxbVaACr/2dWP5uX
+        ejAEHQXFO+V0n5CRIbAZSqE7osCjRTUawOrnhuUaq39hYSGJuzF7e3tRf3//cUMwcsDqnz5u9fuoMwTq
+        5HulkYMjq39paSmJNh9skiqVSjZ8zp550BHnBUYOWP1nWP06nExiPR5C5/0Mrbu7Ow3+G8kw+Z12W1AO
+        0tUfB7myspLEW5/5+Xk3eDY33I1iwTcBgVXyrP7FxUXOeLPBc2j5g+S2fwu+CVj98UNPCZVtuY/l5WU3
+        eMq2H5P/a8G3AOHN11v9lHBO8PiLtOAL4HD1j46ORhsbG0nsUdzt7O7uusHT7VjwBUKQi6x+VjkwBE/w
+        HErS8VvwBcLqJ9RobGwsrpkJnk9CJvj00cAWfBsgVB5WFE1PT8dDyASfPhDbgm8Th6vfkQcYUZpZ8G2G
+        gHlIXRo8nwQLPhDZ1c+XJRZ8YEYldxbyJYkF/x8wLRmCBW8YhmEYhmEUSkfHP4oM+RrHwFSWAAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <data name="EraserButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
