Added Eraser button functionality

--- a/QuickNote/Form1.resx
+++ b/QuickNote/Form1.resx
@@ -125,28 +125,28 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAUmSURBVHhe7Z3LTitHEEB5iJeEIsSGXbLIN+RTLKTcBd+U
-        SCz4gdxN/uMq3xCUTXKVTUSc8BDYKE5VZu5l0n3c1R632zCuI50FUNXVU4WMMWZ6y3GcTWQ6nf4yWyOP
-        j49/tFvZTKQHo/F4/Ny0Yz20W+nNsfhOfC9+ED+KuuibcTQazZ6f1zcD2UMvvhZ/FO/FX8W/xeji3orr
-        HILUXwj9jv9OvBMfxOhi3qrrGoLUzuZL8WdRmx9dgHpzc9Mu+/rQvdGeu65jCFI3i2/EP8WpGG38k6+F
-        yWQyu729bT96gfYcWnsIUtPkK1GbH202tBZXV1ezk5MT3IO6s7MzOz09nd3d3bUZDRRL1hyC1Euij/n6
-        sJP8zv9kLY6OjrB+193d3dnT01Ob0UBx86w1BKmV5Htx7mN+aC2oNhlCMSlrDEHqzEWfamY3X60F1SZD
-        KMZy1UOQGnPR5/kLPdWsBdUmQygmx1UOQdZHvhD1l6xoMylrQbXJEIrJdVVDkLWRb8XfxGgjKWtBtckQ
-        ilnEVQxB1kV+EP8So02krAXVJkMoZlFLD0HWRH4S/xGjDaSsBdUmQyimjyWHIOshv4tRYctaUG0yhGL6
-        WmoIshbyLEZFLWtBtckQilnGEkOQdZCoWI61oNpkCMUs67JDkDWQqFCOtaDaZAjFlHCZIUg+EhXJsRZU
-        mwyhmFL2HYLkIlGBHGtBtckQiilpnyFIHhItnmMtqDYZQjGlXXQIkoNEC+dYC6pNhlDMKlxkCBKPRIvm
-        WIv9/X2s33V7e7uNfoHiVmXuECQWiRbMsRbn5+ez4+Nj3IOqXzs7O2ujX6DYVZozBIlDosVyrIX+qfHi
-        4mJ2eHiI+9jb25tdXl620S9Q7Kq1hiAxSLRQjuHfYF8T9/f3uOcapoYgX0eiRdzlnDcE+RoSLeAuLw1B
-        Po9EyW4ZdQjdNwTL55Ao0S2n8Pld2fIxEiW5RdUpjCaTib6xGaEkt5wmlOSW04SS3HKaUJJbThNKcstp
-        QkluOU0oyS2nCSW55TShJLecJpTkltOEktxymlCSW04TSnLLaUJJbjlNKMktpwklueU0oSS3nCaU5JbT
-        hJLccppQkltOE0pyy2lCSeh4PNZ3V2w02gPqTUITSkKdBupNQhNKQp0G6k1CE0pCnQbqTUITSkK7XF9f
-        Z/33yltXr1GvtQvFJTShJLTLw8PDf/8aRHFDU6+1C8UkNKEkNIRihmgIxSQ0oSQ0hGKGaAjFJDShJDSE
-        YoZoCMUkNKEktMsm/QyYTqftVTdQTEITSkK76DODg4MDjBuS+l+YfW8K22pCSegmEt4QVqHeJDShJNRp
-        oN4kNKEk1Gmg3iQ0oSTUaaDeJDShJNRpoN4kNKEk1Gmg3iQ0oSTUaaDeJDShJNRpoN4kNKEktIv+Iqa/
-        pFDckNRrXPXL0dk3bu2iL0VQzBBd4uVo7a1J9q2LQyhmiIZQzBy1tybZN+8OoZghGkIxoPZUe2uSffv6
-        Lpv0EAT3/clRe6q9Nck+wKHLpvwQ1hOaer4aqj3V3ppkH2GyiehBcSHUG1B7qr3NIusQH6eBehOovdSe
-        ZpN1jJXTQL0J1F5qTxfCPMiNzmzcNLQH1JuO2kPt5cIsdJShi2rvtIfay15kH+bpoto77eFSZB1n6/5P
-        7ZX2THtXBPNAZ/ez2iPtlfasKIM90ryQ2hPtjfao92N+DoM61H9J9dq1B9oL7cnCTzWXQaf8TnwvfhA/
-        irTJIarXqtes1649WOl3vOM4jjNEtrb+BV1xwqRMPSaKAAAAAElFTkSuQmCC
+        SCz4gdxN/uMq3xCUTXKVTSAkPAQ2ilOVmXuZdB93tT3tNozrSGcBVHX1VCFjjJnecBxnHZlMJr9MV8jj
+        4+Mf7VbWE+nB6Orq6rlpx2pot7Iwh+I78b34Qfwo6qJvxtFoNH1+Xt0MZA8L8bX4o3gv/ir+LUYX91Zc
+        5RCk/lzod/x34p34IEYX81Zd1RCkdjZfij+L2vzoAtTr6+t22deH7o323HUVQ5C6WXwj/ilOxGjjn3wt
+        jMfj6e3tbfvRC7Tn0NpDkJomX4na/GizobW4uLiYHh0d4R7Ura2t6fHx8fTu7q7NaKBYsuYQpF4SfczX
+        h53kd/4na3FwcID1u25vb0+fnp7ajAaKm2WtIUitJN+LMx/zQ2tBtckQiklZYwhSZyb6VDO7+WotqDYZ
+        QjGWyx6C1JiJPs+f66lmLag2GUIxOS5zCLI+8oWov2RFm0lZC6pNhlBMrssagqyNfCv+JkYbSVkLqk2G
+        UMw8LmMIsi7yg/iXGG0iZS2oNhlCMfNaegiyJvKT+I8YbSBlLag2GUIxi1hyCLIe8rsYFbasBdUmQyhm
+        UUsNQdZCnsWoqGUtqDYZQjF9LDEEWQeJiuVYC6pNhlBMX/sOQdZAokI51oJqkyEUU8I+Q5B8JCqSYy2o
+        NhlCMaVcdAiSi0QFcqwF1SZDKKakiwxB8pBo8RxrQbXJEIop7bxDkBwkWjjHWlBtMoRiluE8Q5B4JFo0
+        x1rs7u5i/a6bm5tt9AsUtyxzhyCxSLRgjrU4PT2dHh4e4h5U/drJyUkb/QLFLtOcIUgcEi2WYy30T41n
+        Z2fT/f193MfOzs70/Py8jX6BYpetNQSJQaKFcgz/BvuauL+/xz3XMDUE+ToSLeL2c9YQ5GtItIDbXxqC
+        fB6Jkt0y6hC6bwiWzyFRoltO4fO7suVjJEpyi6pTGI3HY31jM0JJbjlNKMktpwklueU0oSS3nCaU5JbT
+        hJLccppQkltOE0pyy2lCSW45TSjJLacJJbnlNKEkt5wmlOSW04SS3HKaUJJbThNKcstpQkluOU0oyS2n
+        CSW55TShJLecJpTkltOEktCbmxt9d8Vaoz2g3iQ0oSTUaaDeJDShJNRpoN4kNKEk1Gmg3iQ0oSS0y+Xl
+        ZdZ/r7x19Rr1WrtQXEITSkK7PDw8/PevQRQ3NPVau1BMQhNKQkMoZoiGUExCE0pCQyhmiIZQTEITSkJD
+        KGaIhlBMQhNKQrus08+AyWTSXnUDxSQ0oSS0iz4z2Nvbw7ghqf+FuehNYVtNKAldR8IbwirUm4QmlIQ6
+        DdSbhCaUhDoN1JuEJpSEOg3Um4QmlIQ6DdSbhCaUhDoN1JuEJpSEOg3Um4QmlIQ6DdSbhCaUhHbRX8T0
+        lxSKG5J6jct+OTr7xq1d9KUIihmiPV6O1t6aZN+6OIRihmgIxcxQe2uSffPuEIoZoiEUA2pPtbcm2bev
+        77JOD0Fw358ctafaW5PsAxy6rMsPYT2hacFXQ7Wn2luT7CNM1hE9KC6EegNqT7W3WWQd4uM0UG8CtZfa
+        02yyjrFyGqg3gdpL7elcmAe50ZmN64b2gHrTUXuovZybuY4ydFHtnfZQe7kQ2Yd5uqj2TnvYi6zjbN3/
+        qb3SnmnvimAe6Ox+VnukvdKeFWWwR5oXUnuivdEeLfyYn8OgDvXvqV679kB7oT2Z+6lmH3TK78T34gfx
+        o0ibHKJ6rXrNeu3ag6V+xzuO4zhDZGPjX94Xwol3h56GAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="LoadButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -272,75 +272,75 @@
   <data name="CursorButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAgdSURBVHhe7Z19TJVVHMd5kRdB3l+tAcUaFa0JUcIipsum
-        vfgHwmo06j82Kla02pp/VNBKc9Vs/mH+UVSyGsIm6XRiYaBjpqsRsV5YL74QKaWoiChyufeevl99LiM6
-        XK68XM5znue7faa7g12e7znPOb/zO7/zPAG2vOpWEHv9v7b8pTDwIjgOfgMDoBDY8oMeAr3gdzAGBBgC
-        58C9wNY8KRJsBWfBKKDxE2Ej8E64G9iaY90JjoEzYLLxE2Ej8GeygK05UikYBCNAZvpk2AinASdnW7NQ
-        IHgb0FCZ0d7g7/SBm4GtGYhRTjOYifke+LsctpKBrRtQAugEw0Bm7I1wCfSAeGDLB6WBP4EsypkpbIRu
-        EAVsedHtgCGmE8iMnA28m74DEcCWRPeAi8ANZAbOBWyEDsD5xdYEFYC5GO994TJoBYuALeh+QFNkZs0X
-        V8AeEAwsrSJAM2QmzTf83ibAtYYl9QBYKPM9cGX9KbCcmLFcaPM9XAUfAMuImUp/Tbi+wkZ4D2iv28Bs
-        UgvzCRd+bwBtxXwMF1myi1cFB3gFaCdupHD3aj4XWXMFG+F5oI0Yax8B85FemC+4zVkBtFA9YK+SXajK
-        sBHKganFW3kus5r+hnctd+NMKa5yzWr+KfAP+BZ0AdMpBTAHL7s4lWE2lhv6HwPuS5hSQeAHILtAlWGB
-        F7cvTV/c9S7wFEuZAa6COeR8BBgum1r5wEwRz9+A1XRPA9MrBPCCZBeqIlwYsmwlB2ihd4ALyC5WNX4F
-        RwGDBS3EMhKOpbKLVQnOTX+ABhAOtBHDNtkFqwT3H1hRzbSzVrtgvBjVY37WlfaDl4F2ygSqbbBMhIEB
-        0+BPAS0VB1RtAFZI0/wSoLVYSigzYCH5C/CwxqNAa90CVNlg98AOwZ7/INBerDKTmbBQsOfT/BVAe/Gw
-        nK+nVvwBIx0OO6uA9uLkewHIjFgImEZmz38EWEItQJWsJzsCe34xsIReAqqEngwAGOs/CSwhTm7+rmae
-        Cu7ZMpevVRmJN6WD80CV+h7mdt4EllA04DMZVIl6ToAPgSXE0yRtgEktmRn+hj3/K2CZUy51gFGGzAx/
-        wwn3F8A70hLiGKuK+Rz+GO9zLrKEGF1w01pmxkLAIdASKQaKcbVK5vMurAaWEFeUXF2qssnOQx1fAEuI
-        uRSar1J9D+s0mXvSXswi0nyVKhxYr2mJ7CYnN65yVdpcYarBEkMPd45ovio5Hg/s/dxx01rcM+Wwo9LG
-        igcWUWktVguw56ta1cZ6I20nX9bJsOerfIqFCy/WHWknVohxkaX6yUV2EO3KCFkbOd2zN1WAneN9oI1Y
-        DdwIuKiRXbBqcMuTVddaiHXwfF6aGXo+YUT2GtBCPAHCGklGO7KLVRFuuPDEjenFs09czJjh8IQH9v48
-        YGrxtN8nwEy9nnAl/jowtXjOlcWpDOFkF6kqLPI6DHjO2JTiye7PAIccsxyWmwjvVlMemvvJQNV8ji9w
-        6DHlCfWTa9eu5VP/zHQyfTKM9037bJ4zMTEx7jVr1rBQ1ozP5GGybRswrX7euXPnYFZWllixYgUf926m
-        RmDP/xqY+um17fv37z89MDAgCgsLRV5eHsv1zNAInKt+BKZ/OEZTXV1dr4BGRkZEaWmpyM7OHggKClK5
-        EZj+5jEiLd5qsXXDhg3H2QCUy+US1dXVIiMj43JoaKiKEzP/Jtb38PmhWqi2qqrqmOH/uDZv3iySk5Md
-        kZGRKuX7+bcwVNbqHV/PrVu3bvwOmKimpiYRHx/vjI2NVaEReJ6AC0Tt3nL3eFFR0UnD8/+po6NDJCYm
-        ugh+VmaMP+B303wt3/O4EpPuKcNvqXp6ekR6erorJSVlIRqBdx/N56PqtdRd6N0DhtdTqr+/X+Tk5LhS
-        U1P9ebSI5nNTnY8x01ZJERERw4bPXjU8PMzFGu8EfzQCQ01OuHwxj9YKRsw/hLtg7ODBg4bVU8vpdIqK
-        igp3QkKCzLS5wnNsNBvor7i4uPaCggLXkiVLnL40AlVTU+OOiYmRmTdbmF7gQb6bgCWUEx0dfWVoaEhs
-        3LjRgeHI50aor68XUVFRIjAwUGbkTGAN/zcgBlhD6MVHN23a5DY8Fdu3b3csXrzY50Y4cOCAQAOK4OBg
-        maE3ArOafG6cFhvpvuqxjIyMSxzXJ6qxsdERHh7ubGtrMz7xru7ubpGUlCRCQ0NlxvoCx/xngaUUHBkZ
-        eWLv3r2Gjf/V7t27HWFhYc7W1lbjE+/q6+sTmZmZAr8jM3gqmPBjXkfbGN+bKpcvX37B8E+qHTt2jLER
-        9u3b5zI+8qrBwUGRn58vMITJzJ4M08l8UJMljg1NVhSMPd/V1WVYN7VwBzgxHLmam5sdxkdeNTo6KoqL
-        i6drBO7fVgFrClHLWyUlJecNz6YV5gIXDHU1NDSMGB95ldvtvpbSRsNNNp6p5C9BIrC0Tq1fv/6w4de0
-        GhsbE2iwq4h0nJ2dneeMj6fVli1bPHMCc0jc7ryPX24rICAX9JaXl3cYXk2plpYWd1pa2sCiRYvYc1/A
-        v2cPHTrUz9wQk3Tt7e0Cd4bYtm2bqK2tFZWVlWL16tVXli1bNrJ06VIHIiN3SEgI60ptTVIqOJqbm/s9
-        zBxfB3jECbWsrGwIBvIZak9c+43rehhD2EV8fg6Ltl5wBGuJPYioWMZYA54BZWAluAPwe2xNIdb7f56a
-        mnoMvXl8MYB1gIChwxj3+UYI66xKF1Cvokef2bVr1+iqVatGYD7fhcI3VNvyo0owVg/Exsaysth+Vfec
-        KyDgX15uL9FpQl/TAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAgeSURBVHhe7Z19TJVVHMdR5EWRdxCsAcUaFa0JUeoiRoum
+        vfgHwmo06j82K1a02pp/VNLItVWz+YfxR1HJYgw2SaczCwMdM12NiEWxXnwhUEpREVHkcu89fb/6XEZ0
+        uFzhcu95zvN8t890d7DL8z3nOed3fud3nifEllfdDuJu/NdWoBQBXgEnwO9gCOQDWwHQo6AP/AEmgAAj
+        4Dy4H9haIEWBHeAcGAc0fipsBN4J9wJbftbd4Dg4C6YbPxU2An8mC9jyk0rBMBgDMtOnw0Y4Azg525qH
+        FoF3AQ2VGe0N/k4/uBXYmoMY5bSAuZjvgb/LYWsFsHUTSgSdYBTIjL0ZLoNekABs+aA08BeQRTlzhY3Q
+        DaKBLS+6EzDEdAKZkfOBd9MPYBmwJdF94BJwA5mB/oCN0AE4v9iaorXAH+O9L1wBrWAJsAU9CGiKzKyF
+        4irYC0KBpVUAaIbMpIWG39sMuNawpB4CwTLfA1fWnwPLiRnLYJvv4Rr4CFhGzFQGasL1FTbCB0B73QHm
+        k1pYSLjwextoK+ZjuMiSXbwqOMDrQDtxI4W7Vwu5yPIXbISXgDZirH0ULER6YaHgNmcF0EL1gL1KdqEq
+        w0YoB6YWb2V/ZjUDDe9a7saZUlzlmtX80+Af8D3oAqZTCmAOXnZxKsNsLDf0PwXclzClFoOfgOwCVYYF
+        Xty+NH1x1/vAUyxlBrgK5pDzCWC4bGqtAWaKeP4GrKZ7DpheYYAXJLtQFeHCkGUrOUALvQdcQHaxqvEb
+        OAYYLGghlpFwLJVdrEpwbvoTNIJIoI0YtskuWCW4/8CKaqadtdoF48WoHvOzrnQQvAa0UyZQbYNlKgwM
+        mAZ/FmipeKBqA7BCmuaXAK3FUkKZAcFkAPCwxhNAa90GVNlg98AOwZ7/CNBerDKTmRAs2PNpfiHQXjws
+        5+uplUDASIfDThHQXpx8LwKZEcGAaWT2/MeBJfQVUCXryY7Anl8MLKFXgSqhJwMAxvrPAEuIk1ugq5ln
+        gnu2zOVrVUbiTengAlClvoe5nRpgCcUAPpNBlajnJPgYWEI8TdIGmNSSmRFo2PO/AZY55VIHGGXIzAg0
+        nHB/BbwjLSGOsaqYz+GP8T7nIkuI0QU3rWVmBAMOgZZIMVCMq1Uyn3dhFbCEuKLk6lKVTXYe6vgSWELM
+        pdB8lep7WKfJ3JP2YhaR5qtU4cB6TUtkNzm5cZWr0uYKUw2WGHq4c0TzVcnxeGDv546b1uKeKYcdlTZW
+        PLCISmuxWoA9X9WqNtYbaTv5sk6GPV/lUyxceLHuSDuxQoyLLNVPLrKDaFdGyNrI2Z69qQLsHB8CbcRq
+        4CbARY3sglWDW56sutZCrIPn89LM0PMJI7I3gRbiCRDWSDLakV2sinDDhSduTC+efeJixgyHJzyw9+cB
+        U4un/T4DZur1hCvxt4CpxXOuLE5lCCe7SFVhkdcRwHPGphRPdn8BOOSY5bDcVHi3mvLQXI+BqvkcX+DQ
+        Y8oT6qc2bNjAp/6Z6WT6dBjvm/bZPGdjY2Pd69evZ6GsGZ/Jw2RbLTCtftm1a9dwVlaWKCws5OPezdQI
+        7PnfAlM/vbb9wIEDZ4aGhkR+fr7Iy8tjuZ4ZGoFz1c/A9A/HaK6rq+sT0NjYmCgtLRXZ2dlDixcvVrkR
+        mP7mMSIt3mqxY+vWrSfYAJTL5RJVVVUiIyPjSnh4uIoTM/8m1vfw+aFaqLqysvK44f+ktm3bJlasWOGI
+        iopSKd/Pv4Whslbv+Hpx48aNk3fAVDU3N4uEhARnXFycCo3A8wRcIGr3lrunCgoKThme/08dHR0iKSnJ
+        RfCzMmMCAb+b5mv5nseHMemeNvyWqre3V6Snp7tSUlKC0Qi8+2g+H1Wvpe5B7x4yvJ5Rg4ODIicnx5Wa
+        mhrIo0U0n5vqfIyZtkpetmzZqOGzV42OjnKxxjshEI3AUJMTLl/Mo7VCEfOP4C6YOHTokGH1zHI6naKi
+        osKdmJgoM81feI6NZgP9FR8f37527VrX8uXLnb40ArVlyxZ3bGyszLz5wvQCD/LdAiyhnJiYmKsjIyOi
+        pqbGgeHI50aor68X0dHRYtGiRTIj5wJr+L8DscAaQi8+hpWw2/BU7Ny507F06VKfG+HgwYMCDShCQ0Nl
+        ht4MzGryuXFabKT7qiczMjIuc1yfqqamJkdkZKSzra3N+MS7uru7RXJysggPD5cZ6wsc818AllJoVFTU
+        yX379hk2/ld79uxxREREOFtbW41PvKu/v19kZmYK/I7M4Jlgwo95HW1jfG/atHr16ouGf1I1NDRMsBH2
+        79/vMj7yquHhYbFmzRqBIUxm9nSYTuaDmixxbGi6omHsha6uLsO6mYU7wInhyNXS0uIwPvKq8fFxUVxc
+        PFsjcP+2ElhTiFreKSkpuWB4NqswF7hgqKuxsXHM+Mir3G739ZQ2Gm668Uwlfw2SgKV1evPmzUcMv2bV
+        xMSEQINdQ6Tj7OzsPG98PKu2b9/umROYQ+J25wP8clshIbmgr7y8vMPwakZhknanpaUNLVmyhD33Zfx7
+        7vDhw4PMDTFJ197eLnBniNraWlFdXS02bdok1q1bd3XVqlVjK1eudCAycoeFhbGu1NY0pYJjubm5Pw4M
+        DEyuAzzihFpWVjYCA/kMtaev/8YNPYYh7BI+P49FWx84irXEXkRULGPcAp4HZeBhcBfg99iaQaz3b0hN
+        TT3e09MzuRjAOkDA0FGM+3wjhHVWpUHUG+jRZ3fv3j1eVFQ0BvP5LhS+odpWAFWCsXooLi6OlcX2q7r9
+        rpCQfwH3Xy+biRpjeAAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="DrawButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYvSURBVHhe7ZxLaCRVGEZHxURFRERIBEEUxYWCYIzgQkQM
-        ydb3VgSFSFwIunCh4KAuXJgOycKNiyAouBF0ISi4UDAIguJ7fMTJ+/1O1MRkuvxOTVWsXG53Kt3VV6T+
-        A4eZzvRk8f236/F1VZ0yDMMw/o/cKl+WN8evjKA8Jg9kJP+S90kjEG9Jgs+6K20IAXhfuuGn2hBayAXy
-        M+kLPqsNoQW0y2+lL3CfNoQCuUpOSV/Q9bQhFMD18nfpCziPNoQm6JaLckv6ws2rDaFBJuWG9IV6Um0I
-        DXCPXJd70hfqSbUh5OBuOSvvjV/ZEIJyl1yV25JqoVVD4Hdbd+Rwp1yRBJ0NqlVDeEUaCbdLN/zUVgyB
-        Ao8W1RC3yWVZ72in6CHQohriFrkk8xxqFjUEWlRDsBPkJGtT+oJyrUren9LIEGhRDXGjXJAnCZ+zYULP
-        cpIh0KIa4gY5JxsNnz/ZbJ1kc0SLSpVdeq6TMzJvt+MLn9f8PM8+gaOdM5Iqu/RcK6mUiwg/fU+9IfBe
-        WlSq7NJzjZyQnOGm4dUzT/ipviFwVMUOmyq79HRIVmIrwk91h8An7Y74Vcm5Wv4id6QvONdGwk/NDsEQ
-        bHvZAYYIH/mE0aIa4kr5g/xD+sJybTZ8tvu0qFTZpecKyXF36PCpskvP5fJr+af0heXabPgc7dCiUmWX
-        nsvklzJk+LSoVNml51L5heRIxBeWa7PhU2NQR1Bllx5O8z+XIcPnJIsqu/S0yU9lyPBpUe37XHGx/ERy
-        lYEvLNdmw+e9tKg3ydJzkfxYhgyfFpUqu/QQ/ocy7zdRzYbPGe60pMouPRfKD2TI8GlRqbJLD98ovSdD
-        hU+HRItKlV16CP9d+bf0heVaRPi0qFTZhnhbhgqfDokWlSrbEKMyZPi0qPY1YsKbcl/6wnJtNnw6pG8k
-        VbYh3pAhw6dFpco2xLAMFT41Bi0qVbYhBmV6+/9xFhE+LSpVtiFekyHDp0WlyjYENyyECp8OiRbVrlhL
-        eEmGDJ8WlSrbEC/IUOFTY3wkqbIN8bw8J31huRYRPi0qbaohnpMhw6dFtfATnpGhwqfGoEWlyjbE0zJk
-        +LSodnNEwlMyZPi0qBZ+wpMyVPjUGLSoRsLjMmT4tKhGhlbeHJGV8GlRDYeH5HHX6TcbPidztKiG6JRc
-        TfBo/Oo8nPFyMasvvCLCf10aCVTKPG2KYB7hBwnvSPf5a0WET4tqJLD612R6+Uh2CJdI+vevJP9WRPiv
-        SiMDq5/vVt2gHt7f3z87Njb2gP7Op4P3NBv+aWlkSFe/7yqGg42Njdn19fW90dHRJ/SaITQaPoe07FMM
-        B1b/952dndHU1FTU29t7JLhKpVJdW1urbm9v71Sr1WbCp0U1HFj93LC2Pzg4GC0tLUV7e3tHhtDf3x+t
-        rKxEkBkCR0vuJquWhP+sNDyw+n9k9WtTE4cMDKGtrS0OsLu7+3AAwBAymyMuC3EDz0r4tKiGh3T1H7D6
-        JyYmkojP09fXF4fY3t4ebW5uxkNANkfsE5IdM0dHtR4RTPi0qEYNWP1n3NWfMjw8fBgmQ+jq6ooGBgYi
-        DavKjpmjI/0bh6icJ7gna4RPi2rUIF3951j909PTSez/sry8nA3UlcPJB2XKizKtLQifFtWoA6v/V1Y/
-        m5daMISRkZF4p5zuEzIyBDZDKXRHFHi0qEYdWP3csFxl9c/OziZx12d3dzfq6ek5bghGDlj948etfh81
-        hkCdfL80cnBk9c/PzyfR5oNN0uTkZDZ8zp550BHnBUYOWP1nWf1bW1tJrMdD6LyfoXV0dKTBfycZJr/T
-        bgvKQbr64yAXFxeTeGszMzPjBs/mhrtRLPgGILDJPKt/bm6OM95s8Bxa/iS57d+CbwBWf/zQU0JlW+5j
-        YWHBDZ6y7efk/1rwTUB4M7VWPyWcEzz+Ji34Ajhc/ZVKJVpdXU1ij+JuZ2dnxw2ebseCLxCCnGP1s8qB
-        IXiC51CSjt+CLxBWP6FGQ0NDcc1M8HwSMsGnjwa24FsAofKwomh8fDweQib49IHYFnyLOFz9jjzAiNLM
-        gm8xBMxD6tLg+SRY8IHIrn6+LLHgA1OR3FnIlyQW/H/AuGQIFrxhGIZhGIZRKKdO/QOa1PjSNbr0WgAA
-        AABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYwSURBVHhe7ZxLaCRVGEajYqIiIiIkgiCK4kJBMEZwISKG
+        ZOt7K4JCJC4EXbhQcFAXkpiEZOHGRRAU3Ai6EBRcKBgEQfE9PuLk/Y7mpSYm0+V3aqpi5XK7U+muviL1
+        HzjMdKYni++/XY+vq6rFMAzD+D9ys3xR3hi/MoLyiDyQkfxL3iONQLwhCT7rrrQhBOBd6YafakNoIufJ
+        T6Qv+Kw2hCbQJr+WvsB92hAK5Ao5I31B19KGUADXyl+lL+A82hAaoEsuyy3pCzevNoQ6mZYb0hfqSbUh
+        1MFd8ne5J32hnlQbQg7ulPPy7viVDSEod8h1uS2pFpo1BH63dUcOt8s1SdDZoJo1hJekkXCrdMNPbcYQ
+        KPBoUQ1xi1yVtY52ih4CLaohbpIrMs+hZlFDoEU1BDtBTrI2pS8o14rk/Sn1DIEW1RDXyyV5kvA5Gyb0
+        LCcZAi2qIa6TC7Le8PmTzdZJNke0qFTZpecaOSfzdju+8HnNz/PsEzjaOS2pskvP1ZJKuYjw0/fUGgLv
+        pUWlyi49V8kpyRluGl4t84Sf6hsCR1XssKmyS0+7ZCU2I/xUdwh80m6LX5WcK+VPckf6gnOtJ/zU7BAM
+        wbaXHWCI8JFPGC2qIS6X38k/pC8s10bDZ7tPi0qVXXoukxx3hw6fKrv0XCq/lH9KX1iujYbP0Q4tKlV2
+        6blEfi5Dhk+LSpVdei6Wn0mORHxhuTYaPjUGdQRVdunhNP9TGTJ8TrKosktPq/xYhgyfFtW+zxUXyo8k
+        Vxn4wnJtNHzeS4t6gyw9F8gPZcjwaVGpsksP4b8v834T1Wj4nOHOSqrs0nO+fE+GDJ8WlSq79PCN0jsy
+        VPh0SLSoVNmlh/Dfln9LX1iuRYRPi0qVbYg3Zajw6ZBoUamyDTEuQ4ZPi2pfIya8LvelLyzXRsOnQ/pK
+        UmUb4jUZMnxaVKpsQ4zKUOFTY9CiUmUbYkimt/8fZxHh06JSZRviFRkyfFpUqmxDcMNCqPDpkGhR7Yq1
+        hBdkyPBpUamyDfGcDBU+NcYHkirbEM/Ks9IXlmsR4dOi0qYa4hkZMnxaVAs/4SkZKnxqDFpUqmxDPClD
+        hk+LajdHJDwhQ4ZPi2rhJzwuQ4VPjUGLaiQ8KkOGT4tqZGjmzRFZCZ8W1XB4QB53nX6j4XMyR4tqiA7J
+        1QQPx6/OwRkvF7P6wisi/FelkUClzNOmCOYhfpDwlnSfv1ZE+LSoRgKr/zeZXj6SHcJFkv79C8m/FRH+
+        y9LIwOrnu1U3qAf39/fPTExM3Ke/8+ngPY2Gf0oaGdLV77uK4WBjY2N+bW1tb3x8/DG9Zgj1hs8hLfsU
+        w4HV/21HR0c0MzMT9fT0HAlucHCwsrq6Wtne3t6pVCqNhE+Lajiw+rlhbX9oaChaWVmJ9vb2jgyhr68v
+        0icggswQOFpyN1nVJPynpeGB1f89q1+bmjhkYAitra1xgF1dXYcDAIaQ2RxxWYgbeFbCp0U1PKSr/4DV
+        PzU1lUR8jt7e3jjEtra2aHNzMx4Csjlin5DsmDk6qvaIYMKnRTWqwOo/7a7+lNHR0cMwGUJnZ2fU398f
+        DQwMVNgxc3Skf+MQlfME92SN8GlRjSqkq/8sq392djaJ/V+00rOBunI4eb9MeV6mtQXh06IaNWD1/8zq
+        Z/NSDYYwNjYW75TTfUJGhsBmKIXuiAKPFtWoAaufG5YrrP75+fkk7trs7u5G3d3dxw3ByAGrf/K41e+j
+        yhCok++VRg6OrP7FxcUk2nywSZqens6Gz9kzDzrivMDIAav/DKt/a2srifV4CJ33M7T29vY0+G8kw+R3
+        2m1BOUhXfxzk8vJyEm915ubm3ODZ3HA3igVfBwQ2nWf1LywscMabDZ5Dyx8kt/1b8HXA6o8fekqobMt9
+        LC0tucFTtv2Y/F8LvgEIb67a6qeEc4LHX6QFXwCHq394eDhaX19PYo/ibmdnZ8cNnm7Hgi8Qglxg9bPK
+        gSF4gudQko7fgi8QVj+hRiMjI3HNTPB8EjLBp48GtuCbAKHysKJocnIyHkIm+PSB2BZ8kzhc/Y48wIjS
+        zIJvMgTMQ+rS4PkkWPCByK5+viyx4AMzLLmzkC9JLPj/gEnJECx4wzAMwzAMo1BaWv4Bp2r4nDd+990A
+        AAAASUVORK5CYII=
 </value>
   </data>
   <data name="EraserButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
